# fts

./: .gitignore  Cargo.toml  fts.code-workspace
data/samples/: 1.txt  12.txt
data/samples/8-13/: 11.txt  2.txt
docs/: diagram.epgz
src/: bumo_feat.rs  common_words.rs  distance.rs  foo.txt  index_writer.rs  indexer.rs  indexer_archived  indexer_diagnostics.rs  indexer_recorder.rs  input_file_set.rs  main.rs  rocks_db.rs  tantivy_test.rs  todo.txt  top64.txt  word_hash.rs
