[package]
name = "fts"
version = "0.1.0"
authors = ["alexb <alexbegun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
rocksdb = "0.15.0"
metrohash = "1.0.6"
tantivy = "0.13"
tempdir = "0.3.7"
encoding_rs = "0.8"
encoding_rs_io = "0.1.4"

[profile.release]
debug = true