[package]
name = "fts"
version = "0.1.0"
authors = ["alexb <alexbegun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
rocksdb = "0.15.0"
metrohash = "1.0.6"
tantivy = "0.13"
tempdir = "0.3.7"
memmap = "0.7.0"
bumpalo = { version = "3.4", features = ["collections"] }

[profile.release]
debug = true


[package.metadata.docs.rs]
all-features = true

[features]
default = []
collections = []
boxed = []